--- a/tests/index.html
+++ b/tests/index.html
@@ -8,8 +8,9 @@
     <div id="qunit"></div>
     <div id="qunit-fixture"></div>
 
-    <script src="http://code.jquery.com/qunit/qunit-1.14.0.js"></script>
-    <script src="http://ajax.aspnetcdn.com/ajax/knockout/knockout-3.0.0.js"></script>
+    <script src="//code.jquery.com/qunit/qunit-1.14.0.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="//ajax.aspnetcdn.com/ajax/knockout/knockout-3.0.0.js"></script>
     <script src="../src/knockroute.js"></script>
     <script src="tests.js"></script>
 </body>
