--- a/tests/min.html
+++ b/tests/min.html
@@ -5,7 +5,7 @@
     <link href="http://code.jquery.com/qunit/qunit-1.14.0.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    <a href="min.html">Minified Tests</a>
+    <a href="index.html">Debug Tests</a>
     <div id="qunit"></div>
     <div id="qunit-fixture"></div>
 
