Refactoring and renaming
- Moved kr into ko.route
- Worked on readme a bit

--- a/examples/example1.html
+++ b/examples/example1.html
@@ -108,7 +108,7 @@
         }
 
         function HostModel() {
-            this.router = new kr.ViewRouter({
+            this.router = new ko.route.ViewRouter({
                 views: [
                     { name: 'home', model: ListModel, templateID: 'listTemplate' },
                     { name: 'detail', model: DetailModel, templateID: 'detailTemplate' }
